scss/components/_spinner.scss
// https://projects.lukehaas.me/css-loaders/ - number 8 with some improvements
.spinner,
.spinner::after {
    width: 1em;
    height: 1em;
    font-size: rem(24px);
    border-radius: 50%;
}

.spinner {
    position: relative;
    display: inline-block;
    font-size: $font-size-base;
    border: 0.166667em solid rgba(0, 0, 0, 0.35);
    border-left-color: rgba(0, 0, 0, 0.175);
    animation: spin 1s infinite linear;

    &::after {
        content: "";
    }

    &--lg {
        font-size: rem(30px);
    }

    &--light {
        border-color: $gray;
        border-left-color: $off-white-light;
    }
}

@keyframes spin {
    from {
        transform: rotate(0deg);
    }

    to {
        transform: rotate(360deg);
    }
}

